# tiny-dnn-protobuf

./: .gitignore  CMakeLists.txt  conanfile.py
examples/cpp/: CMakeLists.txt  main.cpp
examples/python/: main.py
messages/: CMakeLists.txt  configuration.proto  status.proto  test_data.proto  train_data.proto  vec_t.proto
src/: CMakeLists.txt  c_api.cpp  c_api.h  func_wrapper.hpp  protobuf_serialization.hpp
